pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingParenthesizedExprDelimiter.pkl
x = 3 * (1 + 2
y = 42

